force-app/main/default/objects/SD__c/SD__c.object-meta.xml
<CustomObject>
    <label>SD</label>
    <nameField>
        <label>SD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>