force-app/main/default/objects/SD__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning to Learn</fullName>
            </value>
            <value>
                <fullName>Imitation</fullName>
            </value>
            <value>
                <fullName>Play Skills</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Receptive Language</fullName>
            </value>
            <value>
                <fullName>Self-Care</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Social Play Skills</fullName>
            </value>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Expressive Language</fullName>
            </value>
            <value>
                <fullName>Abstract Concepts</fullName>
            </value>
            <value>
                <fullName>Kinder Readiness</fullName>
            </value>
            <value>
                <fullName>School Readiness</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Expressive reasoning</fullName>
            </value>
            <value>
                <fullName>Community Access</fullName>
            </value>
            <value>
                <fullName>Abstract Language</fullName>
                <isActive>false</isActive>
                <label>Abstract Language</label>
            </value>
            <value>
                <fullName>Play-Skills</fullName>
                <isActive>false</isActive>
                <label>Play-Skills</label>
            </value>
            <value>
                <fullName>Receptive-Language</fullName>
                <isActive>false</isActive>
                <label>Receptive-Language</label>
            </value>
            <value>
                <fullName>SelfCare</fullName>
                <isActive>false</isActive>
                <label>SelfCare</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>