force-app/main/default/objects/SD__c/fields/CABStatus__c.field-meta.xml
<CustomField>
    <fullName>CABStatus__c</fullName>
    <description>This field is used to store for the UI display StagesV2 if an Objective is used in an SD has status CAB. The field manages the color of the tile on the UI (via css)</description>
    <label>CABStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>