force-app/main/default/objects/SD__c/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <label>Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>