force-app/main/default/objects/SD__c/fields/Correct__c.field-meta.xml
<CustomField>
    <fullName>Correct__c</fullName>
    <inlineHelpText>The total number of Correct responses for Objectives associated with this SD. Calculated by Stats Gatherer</inlineHelpText>
    <label>Correct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>