force-app/main/default/objects/SD__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the Stimulus</inlineHelpText>
    <label>SD Description</label>
    <type>TextArea</type>
</CustomField>