force-app/main/default/objects/SD__c/fields/Earliest_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Session_Date__c</fullName>
    <inlineHelpText>Calculated by Stats Gatherer, the earliest date of a Session that tested this objective.</inlineHelpText>
    <label>Earliest Session Date</label>
    <type>Date</type>
</CustomField>