force-app/main/default/objects/SD__c/fields/InUse__c.field-meta.xml
<CustomField>
    <fullName>InUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by the SD Map Tile apex to indicate if any of the Objectives in the SD have been assigned to the Client</description>
    <label>InUse</label>
    <type>Checkbox</type>
</CustomField>