force-app/main/default/objects/SD__c/fields/Latest_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Session_Date__c</fullName>
    <inlineHelpText>Calculated by Stats Gatherer, the latest  date of a Session that tested this objective.</inlineHelpText>
    <label>Latest Session Date</label>
    <type>Date</type>
</CustomField>