force-app/main/default/objects/SD__c/fields/Match_Count__c.field-meta.xml
<CustomField>
    <fullName>Match_Count__c</fullName>
    <description>This field is used by the SD Map Tile apex to count the number of Objectives in the SD have been assigned to the Client</description>
    <label>Match Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>