force-app/main/default/objects/SD__c/fields/Non_Responsive__c.field-meta.xml
<CustomField>
    <fullName>Non_Responsive__c</fullName>
    <label>Non Responsive</label>
    <inlineHelpText>The total number of Non-Responsive interactions. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>