force-app/main/default/objects/SD__c/fields/Objective_Active_Count__c.field-meta.xml
<CustomField>
    <fullName>Objective_Active_Count__c</fullName>
    <label>Objective Active Count</label>
    <summaryFilterItems>
        <field>Objective__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Objective__c.SD__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>