force-app/main/default/objects/SD__c/fields/Objective_Count__c.field-meta.xml
<CustomField>
    <fullName>Objective_Count__c</fullName>
    <label>Objective Count</label>
    <summaryForeignKey>Objective__c.SD__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>