force-app/main/default/objects/SD__c/fields/Percent_Correct__c.field-meta.xml
<CustomField>
    <fullName>Percent_Correct__c</fullName>
    <label>Percent Correct</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>