force-app/main/default/objects/SD__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <formula>Program__r.PID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PID</label>
    <type>Text</type>
</CustomField>