force-app/main/default/objects/SD__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>SDs</relationshipLabel>
    <relationshipName>SDs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>