force-app/main/default/objects/SD__c/fields/Prompted__c.field-meta.xml
<CustomField>
    <fullName>Prompted__c</fullName>
    <label>Prompted
    </label>
    <inlineHelpText>The total number of Prompted responses. Calculated by Stats Gatherer.</inlineHelpText>

    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>