force-app/main/default/objects/SD__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Desired Response</description>
    <label>Response</label>
    <type>TextArea</type>
</CustomField>