force-app/main/default/objects/SD__c/fields/SDID__c.field-meta.xml
<CustomField>
    <fullName>SDID__c</fullName>
    <externalId>true</externalId>
    <label>SDID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>