force-app/main/default/objects/SD__c/validationRules/CheckActiveParent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckActiveParent</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(ISPICKVAL(Status__c,&apos;Active&apos;),OR(ISPICKVAL(Program__r.Status__c,&apos;Inactive&apos;), ISPICKVAL(Program__r.Status__c,&apos;Draft&apos;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage
  >Sorry, you cant set this SD to Active unless its parent Program status is also Active</errorMessage>
</ValidationRule>