force-app/main/default/objects/SD__c/listViews/Inactive_and_Draft_SDs.listView-meta.xml
<ListView>
    <fullName>Inactive_and_Draft_SDs</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive,Draft</value>
    </filters>
    <label>Inactive and Draft SDs</label>
</ListView>