force-app/main/default/objects/SD__c/listViews/Stages_and_Areas.listView-meta.xml
<ListView>
    <fullName>Stages_and_Areas</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Stage__c</columns>
    <columns>Area__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Stages and Areas</label>
</ListView>